--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,3 +4,4 @@ NotEmpty.cliente.email:El email del cliente es requerido
 Email.cliente.email:La dirección de correo electrónico no es válida
 NotNull.cliente.createAt:La fecha no puede ser nulla
 typeMismatch.cliente.createAt:Formato de la fecha es inválido, debe ser yyyy-MM-dd
+NotEmpty.factura.descripcion = "La descripción es requerida"
